Update CFG File for Plone 4.3.7.

--- a/develop.cfg
+++ b/develop.cfg
@@ -18,8 +18,8 @@
 #
 #    Common development tools:
 #
-#     * zopeskel, a Python package skeleton generator with support
-#       for common Plone development packages like content-type
+#     * mr.bob, a Python package skeleton generator. With bobtemplates.plone
+#       is supports common Plone development packages like content-type
 #       and theme packages.
 #
 #     * mr.developer, a tool that automatically checks out source for
@@ -32,6 +32,10 @@
 #     * Diazo command-line tools: diazocompile and diazorun. Useful
 #       for debugging and understanding Diazo and plone.app.theming.
 #       See http://docs.diazo.org/en/latest/compiler.html
+#
+#     * collective.checkdocs adds new distutils commands checkdocs and
+#       showdocs to validate restructured text in long_description
+#       field of Python eggs.
 #
 #     * zest.releaser, a kit for managing the release cycle for Python
 #       packages. See https://pypi.python.org/pypi/zest.releaser.
@@ -61,14 +65,10 @@
 #
 # To use a python package that is being developed in your src subdirectory, use:
 # myproduct.betterplone = fs myproduct.betterplone
-plone.app.event = git git@github.com:plone/plone.app.event.git branch=1.1.x
-plone.app.contenttypes = git git@github.com:plone/plone.app.contenttypes.git branch=1.1.x
-eea.faceted.vocabularies = git git@github.com:collective/eea.faceted.vocabularies.git
-eea.facetednavigation = git git@github.com:collective/eea.facetednavigation.git
-collective.cover = git git@github.com:collective/collective.cover.git
-cckf.policy = fs cckf.policy
+collective.geo.mapview = fs collective.geo.mapview
 cckf.theme = fs cckf.theme
 cckf.content = fs cckf.content
+cckf.policy = fs cckf.policy
 
 
 [buildout]
@@ -122,16 +122,21 @@ eggs +=
     Products.DocFinderTab
     plone.reload
     plone.app.contenttypes
+    plone.app.multilingual
     eea.facetednavigation
+    collective.geo.bundle
+    collective.geo.mapview
     collective.cover
-    cckf.policy
     cckf.theme
     cckf.content
+    cckf.policy
 
 parts +=
     test
     diazotools
-    zopeskel
+    mrbob
+    checkdocs
+    releaser
     i18ndude
 
 # mr.developer settings:
@@ -156,21 +161,36 @@ recipe = zc.recipe.egg
 eggs = diazo
 
 
-[zopeskel]
-# installs paster and Zopeskel
+[checkdocs]
+# installs collective.checkdocs from pypi [https://github.com/collective/collective.checkdocs]
 recipe = zc.recipe.egg
 eggs =
-    ZopeSkel
-    Paste
-    PasteDeploy
-    PasteScript
-    zopeskel.diazotheme
-    zopeskel.dexterity
+    collective.checkdocs
+
+
+[mrbob]
+recipe = zc.recipe.egg
+eggs =
+    mr.bob
+    bobtemplates.plone
+
+
+[releaser]
+# installs zest.releaser, po compiler
+recipe = zc.recipe.egg
+eggs =
     zest.releaser
-    ${buildout:eggs}
+    zest.pocompile
 
 
 [i18ndude]
 recipe = zc.recipe.egg
 eggs = i18ndude
+
+
+[versions]
+plone.app.multilingual = 2.0.1
+collective.js.bootstrap = 2.3.1.1
+plone.app.blocks = 2.2.0
+plone.app.tiles = 1.0.1
 
